# serializer version: 1
# name: test_default_order_multi_column[session-async-tracked-aiosqlite_engine]
  '''
  SELECT fruit.name,
         fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.sweetness DESC,
            fruit.name ASC,
            fruit.id ASC
  '''
# ---
# name: test_default_order_multi_column[session-async-tracked-asyncmy_engine]
  '''
  SELECT fruit.name,
         fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.sweetness DESC,
            fruit.name ASC,
            fruit.id ASC
  '''
# ---
# name: test_default_order_multi_column[session-async-tracked-asyncpg_engine]
  '''
  SELECT fruit.name,
         fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.sweetness DESC,
            fruit.name ASC,
            fruit.id ASC
  '''
# ---
# name: test_default_order_multi_column[session-async-tracked-psycopg_async_engine]
  '''
  SELECT fruit.name,
         fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.sweetness DESC,
            fruit.name ASC,
            fruit.id ASC
  '''
# ---
# name: test_default_order_multi_column[session-sync-tracked-psycopg_engine]
  '''
  SELECT fruit.name,
         fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.sweetness DESC,
            fruit.name ASC,
            fruit.id ASC
  '''
# ---
# name: test_default_order_multi_column[session-sync-tracked-sqlite_engine]
  '''
  SELECT fruit.name,
         fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.sweetness DESC,
            fruit.name ASC,
            fruit.id ASC
  '''
# ---
# name: test_default_order_under_pagination[session-async-tracked-aiosqlite_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM (
          SELECT fruit.id AS id,
                 fruit.name AS name
            FROM fruit AS fruit
           ORDER BY fruit.name ASC,
                    fruit.id ASC
           LIMIT ?
          OFFSET ?
         ) AS fruit
   ORDER BY fruit.name ASC,
            fruit.id ASC
  '''
# ---
# name: test_default_order_under_pagination[session-async-tracked-asyncmy_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM (
          SELECT fruit.id AS id,
                 fruit.name AS name
            FROM fruit AS fruit
           ORDER BY fruit.name ASC,
                    fruit.id ASC
           LIMIT %s,
                 %s
         ) AS fruit
   ORDER BY fruit.name ASC,
            fruit.id ASC
  '''
# ---
# name: test_default_order_under_pagination[session-async-tracked-asyncpg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM (
          SELECT fruit.id AS id,
                 fruit.name AS name
            FROM fruit AS fruit
           ORDER BY fruit.name ASC,
                    fruit.id ASC
           LIMIT $1::INTEGER
          OFFSET $2::INTEGER
         ) AS fruit
   ORDER BY fruit.name ASC,
            fruit.id ASC
  '''
# ---
# name: test_default_order_under_pagination[session-async-tracked-psycopg_async_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM (
          SELECT fruit.id AS id,
                 fruit.name AS name
            FROM fruit AS fruit
           ORDER BY fruit.name ASC,
                    fruit.id ASC
           LIMIT %(param_1)s::INTEGER
          OFFSET %(param_2)s::INTEGER
         ) AS fruit
   ORDER BY fruit.name ASC,
            fruit.id ASC
  '''
# ---
# name: test_default_order_under_pagination[session-sync-tracked-psycopg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM (
          SELECT fruit.id AS id,
                 fruit.name AS name
            FROM fruit AS fruit
           ORDER BY fruit.name ASC,
                    fruit.id ASC
           LIMIT %(param_1)s::INTEGER
          OFFSET %(param_2)s::INTEGER
         ) AS fruit
   ORDER BY fruit.name ASC,
            fruit.id ASC
  '''
# ---
# name: test_default_order_under_pagination[session-sync-tracked-sqlite_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM (
          SELECT fruit.id AS id,
                 fruit.name AS name
            FROM fruit AS fruit
           ORDER BY fruit.name ASC,
                    fruit.id ASC
           LIMIT ?
          OFFSET ?
         ) AS fruit
   ORDER BY fruit.name ASC,
            fruit.id ASC
  '''
# ---
# name: test_default_order_with_distinct_on[session-async-tracked-aiosqlite_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM (
          SELECT fruit.id AS id,
                 fruit.name AS name,
                 row_number() OVER (PARTITION BY fruit.name ORDER BY fruit.name ASC, fruit.id ASC) AS anon_1
            FROM fruit AS fruit
           ORDER BY fruit.name ASC,
                    fruit.id ASC
         ) AS fruit
   WHERE fruit.anon_1 = ?
   ORDER BY fruit.name ASC,
            fruit.id ASC
  '''
# ---
# name: test_default_order_with_distinct_on[session-async-tracked-asyncmy_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM (
          SELECT fruit.id AS id,
                 fruit.name AS name,
                 row_number() OVER (PARTITION BY fruit.name ORDER BY fruit.name ASC, fruit.id ASC) AS anon_1
            FROM fruit AS fruit
           ORDER BY fruit.name ASC,
                    fruit.id ASC
         ) AS fruit
   WHERE fruit.anon_1 = %s
   ORDER BY fruit.name ASC,
            fruit.id ASC
  '''
# ---
# name: test_default_order_with_distinct_on[session-async-tracked-asyncpg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM (
          SELECT fruit.id AS id,
                 fruit.name AS name,
                 row_number() OVER (PARTITION BY fruit.name ORDER BY fruit.name ASC, fruit.id ASC) AS anon_1
            FROM fruit AS fruit
           ORDER BY fruit.name ASC,
                    fruit.id ASC
         ) AS fruit
   WHERE fruit.anon_1 = $1::INTEGER
   ORDER BY fruit.name ASC,
            fruit.id ASC
  '''
# ---
# name: test_default_order_with_distinct_on[session-async-tracked-psycopg_async_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM (
          SELECT fruit.id AS id,
                 fruit.name AS name,
                 row_number() OVER (PARTITION BY fruit.name ORDER BY fruit.name ASC, fruit.id ASC) AS anon_1
            FROM fruit AS fruit
           ORDER BY fruit.name ASC,
                    fruit.id ASC
         ) AS fruit
   WHERE fruit.anon_1 = %(param_1)s::INTEGER
   ORDER BY fruit.name ASC,
            fruit.id ASC
  '''
# ---
# name: test_default_order_with_distinct_on[session-sync-tracked-psycopg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM (
          SELECT fruit.id AS id,
                 fruit.name AS name,
                 row_number() OVER (PARTITION BY fruit.name ORDER BY fruit.name ASC, fruit.id ASC) AS anon_1
            FROM fruit AS fruit
           ORDER BY fruit.name ASC,
                    fruit.id ASC
         ) AS fruit
   WHERE fruit.anon_1 = %(param_1)s::INTEGER
   ORDER BY fruit.name ASC,
            fruit.id ASC
  '''
# ---
# name: test_default_order_with_distinct_on[session-sync-tracked-sqlite_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM (
          SELECT fruit.id AS id,
                 fruit.name AS name,
                 row_number() OVER (PARTITION BY fruit.name ORDER BY fruit.name ASC, fruit.id ASC) AS anon_1
            FROM fruit AS fruit
           ORDER BY fruit.name ASC,
                    fruit.id ASC
         ) AS fruit
   WHERE fruit.anon_1 = ?
   ORDER BY fruit.name ASC,
            fruit.id ASC
  '''
# ---
# name: test_default_order_with_pk_tiebreaker[session-async-tracked-aiosqlite_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.name ASC,
            fruit.id ASC
  '''
# ---
# name: test_default_order_with_pk_tiebreaker[session-async-tracked-asyncmy_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.name ASC,
            fruit.id ASC
  '''
# ---
# name: test_default_order_with_pk_tiebreaker[session-async-tracked-asyncpg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.name ASC,
            fruit.id ASC
  '''
# ---
# name: test_default_order_with_pk_tiebreaker[session-async-tracked-psycopg_async_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.name ASC,
            fruit.id ASC
  '''
# ---
# name: test_default_order_with_pk_tiebreaker[session-sync-tracked-psycopg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.name ASC,
            fruit.id ASC
  '''
# ---
# name: test_default_order_with_pk_tiebreaker[session-sync-tracked-sqlite_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.name ASC,
            fruit.id ASC
  '''
# ---
# name: test_default_order_without_pk_tiebreaker[session-async-tracked-aiosqlite_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.name ASC
  '''
# ---
# name: test_default_order_without_pk_tiebreaker[session-async-tracked-asyncmy_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.name ASC
  '''
# ---
# name: test_default_order_without_pk_tiebreaker[session-async-tracked-asyncpg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.name ASC
  '''
# ---
# name: test_default_order_without_pk_tiebreaker[session-async-tracked-psycopg_async_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.name ASC
  '''
# ---
# name: test_default_order_without_pk_tiebreaker[session-sync-tracked-psycopg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.name ASC
  '''
# ---
# name: test_default_order_without_pk_tiebreaker[session-sync-tracked-sqlite_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.name ASC
  '''
# ---
